# pwdgen-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md
archlinux/: PKGBUILD
docs/: sections.md
src/: main.c  main.rs
